Fix scrollbars

--- a/_sass/base/base.sass
+++ b/_sass/base/base.sass
@@ -16,6 +16,7 @@ html, body
   min-height: 100%
   margin: 0
   padding: 0
+  overflow-x: hidden
 
 html
   background: $tan
